tests/shouldfail/RecursiveDatatype.hs
module RecursiveDatatype where

topEntity :: [Bool]
topEntity = [True]
